--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                 <li><strong>2D/3D Art:</strong> 3dsMAX, Photoshop, MSpaint and the old good colour pencils. Have used a lot of other software.</li>
                 <li><strong>Electronics:</strong> PCB design in Protel/Altium, Eagle, KiCad. Hand soldering with iron and hotair down to 0204 size and QFN packages.</li>
             </ul>
-        </section>
-        <section id="portfolio" class="section">
+         </section>
+<!--        <section id="portfolio" class="section">
             <h2>Portfolio</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
@@ -127,17 +127,17 @@
                     <p>Project Name 2</p>
                 </div>
             </div>
-        </section>
+        </section> -->
         <section id="contact" class="section">
             <h2>Contact</h2>
             <p>:</p>
             <p><strong>Email:</strong> thierry.garcia@example.com</p>
-            <p><strong>GitHub:</strong> <a href="https://github.com/ThierryGarcia" target="_blank">ThierryGarcia</a></p>
-            <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/thierrygarcia" target="_blank">Thierry Garcia</a></p>
+            <p><strong>GitHub:</strong> <a href="https://github.com/ThierryChatGarou" target="_blank">ThierryGarcia</a></p>
+<!--             <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/thierrygarcia" target="_blank">Thierry Garcia</a></p> -->
         </section>
     </main>
     <footer>
-        <p>© 2024-infinity Thierry Garcia. All Rights Reserved.</p>
+        <p>© 2024 Thierry Garcia. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
